--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -1,5 +1,8 @@
 <!-- Begin adding bathroom to database -->
 
+<div id="motto">
+    <p>Your contribution will prevent others from boom shakaraka</p>
+</div>
 
 <%= form_for @bath, html: {multipart: true} do |f| %>
 
