--- a/app/views/baths/edit.html.erb
+++ b/app/views/baths/edit.html.erb
@@ -3,8 +3,8 @@
 
 <!--this will be a potential problem when our database gets full so make sure you change it-->
 <% @baths.each do |bath| %>
-<div class="row" style="width:50%;">
-    <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
+        <div class="row" style="width:50%">
+            <div class="col-md-6 col md-offset-3" style="min-width: 450px">
 
 
                     <table class="table">
