--- a/app/views/main/nearme.html.erb
+++ b/app/views/main/nearme.html.erb
@@ -5,6 +5,9 @@
         <div class="col-md-6 col md-offset-3">
             
             
+            
+            
+            
                     <table class="table">
                         <tr>
                             <th><b>Location</b></th>
@@ -15,11 +18,18 @@
                             <th><b>Distance from me</b></th>
                             <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
                         </tr>
+
+                        <tr>
+                            <th><b><%= link_to "Get Directions", direction_path(bath) %></b></th>
+                            
+                        </tr>
                         
                     </table>
+                            
         </div>
     </div>
     <% end %>
     
+
     
     <!--distance(current_user.longitude, current_user.latitude, bath.longitude, bath.latitude)-->
