--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -226,3 +226,23 @@
  #footer a:hover {
  	color: rgba(0, 0, 0, 0.2);
  }
+
+  .clear { clear:both; }
+
+
+
+  .table{ border-collapse:separate;
+            border:solid  #eee 2px;
+            /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+            -webkit-border-radius: 13px;
+            /* Firefox 1-3.6 */
+            -moz-border-radius:   13px;
+            /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+            border-radius: 13px;
+          }
+
+
+
+  .table>thead>tr>th, .table>thead>tr>td, .table>tbody>tr>th, .table>tbody>tr>td, .table>tfoot>tr>th, .table>tfoot>tr>td
+    {border:0px solid #fff;
+      border-bottom: 1px solid #eee}
