--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
 
           <div class= "TopRightElementsSpecial"> <li><%= link_to 'CAREERS', newbath_path %></li>         </div>
           <div class= "TopRightElements"> <li><%= link_to 'CONTACT US', profile_path %></li>                </div>
-          <div class= "TopRightElements"> <li><%= link_to 'INVESTOR', home_path %></li>                      </div>
+          <div class= "TopRightElements"> <li><%= link_to 'NEWS', news_path %></li>                      </div>
           <div class= "TopRightElements"> <%= link_to 'ABOUT US', about_path %> </li>                    </div>
 
 </ul>
