--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -17,12 +17,15 @@
                             <td><b><%= bath.city %>, <%= bath.address %></b></td>
                         </tr>
 
-
+                        <tr>
+                            <th><b>Distance from me</b></th>
+                            <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
+                        </tr>
 
                         <tr style="border-bottom: 1px solid #fff">
                           <td colspan="2">
-                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to " Review ", new_bath_review_path(bath) %></div>
-                            <div style="text-align:right; width:30%; float: left;"><%= link_to " View ", view_path(bath) %></div>
+                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Directions", direction_path(bath) %></th> </div>
+                            <div style="text-align:right; width:30%; float: left;"><%= link_to "View", view_path(bath) %></div>
                           </td>
                         </tr>
 
