--- a/app/views/main/directions.html.erb
+++ b/app/views/main/directions.html.erb
@@ -1,13 +1,7 @@
 
-
-<html>
-  <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <title>Directions service</title>
     <style>
       #right-panel {
-        font-family: 'Roboto','sans-serif';
+        font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
         line-height: 30px;
         padding-left: 10px;
       }
@@ -23,16 +17,11 @@
       #right-panel i {
         font-size: 12px;
       }
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
+
       #map {
-        height: 100%;
+        height: 650px;
         float: left;
         width: 63%;
-        height: 100%;
       }
       #right-panel {
         float: right;
@@ -52,14 +41,12 @@
         padding: 5px;
         border: 1px solid #999;
         text-align: center;
-        font-family: 'Roboto','sans-serif';
+        font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
         line-height: 30px;
         padding-left: 10px;
       }
     </style>
-  </head>
-  <body>
-    
+
     <div id="floating-panel">
     <b>Mode of Travel: </b>
     <select id="mode">
@@ -69,13 +56,16 @@
       <option value="TRANSIT">Transit</option>
     </select>
     </div>
-    
+
     <div id="map"></div>
     <div id="right-panel">
       <p>Total Distance: <span id="total"></span></p>
     </div>
+
+    <div class="clear"></div>
+
     <script type="text/javascript">
-      
+
       function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
@@ -88,7 +78,7 @@
           map: map,
           panel: document.getElementById('right-panel')
         });
-        
+
         displayRoute(<%= current_user.latitude %>, <%= current_user.longitude %>, <%= @bath.latitude %>, <%= @bath.longitude %>, directionsService, directionsDisplay);
         document.getElementById('mode').addEventListener('change', function() {
           displayRoute(<%= current_user.latitude %>, <%= current_user.longitude %>, <%= @bath.latitude %>, <%= @bath.longitude %>, directionsService, directionsDisplay);
@@ -117,7 +107,7 @@
             alert('Could not display directions due to: ' + status);
           }
         });
-     
+
       }
 
       function computeTotalDistance(result) {
@@ -133,5 +123,3 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4MhM4eZ3aFFZMEZr34-YyswW6MjvqU6E&callback=initMap">
     </script>
-  </body>
-</html>
