--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Reviews#edit</h1>
-<p>Find me in app/views/reviews/edit.html.erb</p>
+<h1>Edit Your Review</h1>
+<%= form_for [@bath, @review] do |f| %>
+    
+    <div class="field">  
+        <%= f.label :rating %><br />
+        <%= f.number_field :rating, value: 1, min: 1, max: 5 %>
+    </div>
+    
+    <div class="field">  
+        <%= f.label :post %><br />
+        <%= f.text_area :post %>
+        
+    </div>
+        <%= f.submit "Submit edit" %> 
+<% end %>
