--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -115,7 +115,8 @@
                       <td><%= image_tag User.find_by_id(review.user_id).image.url(:mini) %></td>
                       <td style="width:750px"><%= review.post %></td>
                       <% if current_user.id == review.user_id %>
-                          <td><%= link_to '<button type="button">Edit your review</button>'.html_safe, edit_bath_review_path(@bath.id, review.id) %></td>
+                          <td><%= link_to '<button type="button">Edit your review</button>'.html_safe, edit_bath_review_path(@bath.id, review.id) %>
+                          <%= link_to "Destroy", bath_review_destroy_path(@bath, review), method: :delete, data: { confirm: "You sure?" } %></div></td>
                       <% end %>
                       
                   </tr>
