--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,4 +4,10 @@
     <p>© 2016 by SFU created with CMPT276-group13</p>
     <p>|</p>
     <a href="https://github.com/cmptgroup-13/class-project">GitHub link</a>
+    <div
+        class="fb-like"
+        data-share="true"
+        data-width="450"
+        data-show-faces="true">
+     </div>
 </div>
