--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -21,6 +21,7 @@
          Male<%= f.radio_button :role, 'male', :checked => true %>
          Female<%= f.radio_button :role, 'female'  %>
      </div>
+     <% end %>
     <div class="actions">
       <%= f.submit 'Continue', :class => 'btn btn-primary' %>
     </div>
