--- a/app/views/main/nearme.html.erb
+++ b/app/views/main/nearme.html.erb
@@ -3,23 +3,35 @@
     <% @baths.each do |bath| %>
     <div class="row">
         <div class="col-md-6 col md-offset-3">
-            
-            
-                    <table class="table">
-                        <tr>
-                            <th><b>Location</b></th>
-                            <td><b><%= bath.city %>, <%= bath.address %></b></td>
-                        </tr>
 
-                        <tr>
-                            <th><b>Distance from me</b></th>
-                            <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
-                        </tr>
-                        
+
+
+
+
+                    <table class="table">
+                      <tr>
+                          <th><b>Location</b></th>
+                          <td><b><%= bath.city %>, <%= bath.address %></b></td>
+                      </tr>
+
+                      <tr>
+                          <th><b>Distance from me</b></th>
+                          <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
+                      </tr>
+
+                      <tr style="border-bottom: 1px solid #fff">
+                        <td colspan="2">
+                          <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Directions", direction_path(bath) %></th></div>
+                          <div style="text-align:right; width:30%; float: left;"><%= link_to "View", view_path(bath) %></div>
+                        </td>
+                      </tr>
+
                     </table>
+
         </div>
     </div>
     <% end %>
-    
-    
+
+
+
     <!--distance(current_user.longitude, current_user.latitude, bath.longitude, bath.latitude)-->
