--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -9,7 +9,7 @@
                 <% if current_user.image != nil %>
                     <tr>
                         <th>Profile Picture</th>
-                        <td><%= image_tag current_user.image.url(:thumb) %></td>
+                        <td><%= image_tag current_user.image.url(:mini) %></td>
                     </tr>
                 <% end %>
                 <tr>
@@ -78,6 +78,5 @@
                 <% end %>
             <% end %>
         <% end %>
-        <%= link_to 'Edit your profile', edit_user_registration_path %>
     </div>
 </div>
