--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,7 +2,11 @@
     
     <div class="field">  
         <%= f.label :rating %><br />
-        <%= f.number_field :rating, value: 1, min: 1, max: 5 %>
+        <%= f.radio_button :rating, 1 %> 1
+        <%= f.radio_button :rating, 2 %> 2
+        <%= f.radio_button :rating, 3 %> 3
+        <%= f.radio_button :rating, 4 %> 4
+        <%= f.radio_button :rating, 5 %> 5
     </div>
     
     <div class="field">  
