--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,38 +8,23 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3 well">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="field">
-        <%= f.label :name %><br />
-        <%= f.text_field :name, autofocus: true %>
-      </div>
+      <%= f.input :name %>
 
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true %>
-      </div>
+      <%= f.input :email %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
 
-      <div class="field">
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "off" %>
-      </div>
+        <%= f.input :password, placeholder: "leave blank if you don't want to change it" %> 
 
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
-      </div>
+        <%= f.input :password_confirmation %><br />
 
       <% if f.object.encrypted_password.present? %>
-        <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "off" %>
-        </div>
+          <%= f.input :current_password, placeholder: "we need your current password to confirm your changes" %> 
       <% end %>
       
       <div class="field">
@@ -51,9 +36,8 @@
           <%= f.file_field :image, autofocus: true %>
       </div>
 
-      <div class="actions">
-        <%= f.submit "Update" %>
-      </div>
+              <%= f.button :submit, class: "btn btn-success" %> 
+
     <% end %>
 
 
