--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,3 +246,10 @@
   .table>thead>tr>th, .table>thead>tr>td, .table>tbody>tr>th, .table>tbody>tr>td, .table>tfoot>tr>th, .table>tfoot>tr>td
     {border:0px solid #fff;
       border-bottom: 1px solid #eee}
+
+
+.search-img {
+width: 50px;
+height: 50px;
+border: 0 none;
+}
