--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,14 +8,21 @@
 <div id="navbox-container">
     <div class="navbox">
         <h2>Find Nearest Toilet</h2><br>
-        <p>Having trouble with your urine? Or plan before something awkward happens? You can search for the nearest toilet or a toilet near any location</p>
+        <p>Having trouble with your urine? Or plan before something awkward happens? You can search for the nearest toilet or a toilet near any location</p><br>
         <%= form_tag locations_path, :method => :get do %>
             <p>
-                <%= text_field_tag :search, params[:search] %>
-                <%= submit_tag "Search Near", :name => nil %>
+                <%= text_field_tag :search, params[:search], placeholder: "address, city, province/state", :required => true %>
+                <%= submit_tag "Search", :name => nil %>
             </p>
         <% end %>
-        <%= link_to(image_tag("sprint.png", :size => "120x120"), root_path) %>
+
+        <p>
+            or
+        </p>
+        
+        <p>Find bathrooms near your current location</p>
+        <%= link_to(image_tag("cross.png", class: "search-img", :name => "find_me"), locations_path)%>
+
     </div>
     <div class="navbox">
         <h2>Suggest Toilet</h2><br>
