--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,8 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%= link_to user_facebook_omniauth_authorize_path(:facebook), class: "btn btn-block btn-social btn-facebook" do %>
+   <span class="fa fa-facebook"></span> Sign in with Facebook
+    <% end %>      
   <% end -%>
 <% end -%>
