--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,7 +20,7 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to user_facebook_omniauth_authorize_path(:facebook), class: "btn btn-block btn-social btn-facebook" do %>
+    <%= link_to user_facebook_omniauth_authorize_path, class: "btn btn-block btn-social btn-facebook" do %>
    <span class="fa fa-facebook"></span> Sign in with Facebook
     <% end %>      
   <% end -%>
