some formatting and button and pagination

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -83,4 +83,13 @@ input {
     text-align: left;
  }
  
- 
+
+.centerize {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.table tbody>tr>td.vert-align{
+    vertical-align: middle;
+}
