--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -4,106 +4,91 @@
 
 <h1>All bathrooms</h1>
 
+<div class="container-fluid">
+    <!--alex i couldnt get the formatting on this one-->
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3" style="min-width: 450px;">
+        <% if current_user.role == "female" || current_user.role == "male" %>
+        
 
-<% if current_user.role == "female" || current_user.role == "male" %>
-
-    <div class="row" style="width:50%;">
-        <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
-            <% @baths.each do |bath| %>
-                    <% if bath.admin_accept == true %>
-                    <table class="table">
-                        <tr>
-                            <th><b>Location</b></th>
-                            <td><b><%= bath.city %>, <%= bath.address %></b></td>
-                        </tr>
-
-                        <tr>
-                            <th><b>Distance from me</b></th>
-                            <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
-                        </tr>
-
-                        <tr style="border-bottom: 1px solid #fff">
-                          <td colspan="2">
-                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Directions", direction_path(bath) %></th> </div>
-                            <div style="text-align:right; width:30%; float: left;"><%= link_to "View", view_path(bath) %></div>
-                          </td>
-                        </tr>
-
-
-                    </table>
-
-
-
+                    <% @baths.each do |bath| %>
+                            <% if bath.admin_accept == true %>
+                            <table class="table">
+                                <tr>
+                                    <th><b>Location</b></th>
+                                    <td><%= bath.city %>, <%= bath.address %></td>
+                                </tr>
+        
+                        
+                                <tr>
+                                    <th><b>Distance from me</b></th>
+                                    <td><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</td>
+                                </tr>
+        
+                                <tr style="border-bottom: 1px solid #fff">
+                                  <td colspan="2">
+                                    <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Directions", direction_path(bath), :class => 'btn btn-info' %></th> </div>
+                                    <div style="text-align:right; width:30%; float: left;"><%= link_to "View", view_path(bath), :class => 'btn btn-primary' %></div>
+                                  </td>
+                                </tr>
+        
+        
+                            </table>
+        
+        
+                            
+                            <% end %>
                     <% end %>
+                    <%= will_paginate @baths %>
+                
+        <% elsif isAdmin? %>
+            <% @baths.each do |bath| %>
+            <% if bath.admin_accept == true %>
+                <table class="table">
+                    <tr>
+                        <th><b>Location</b></th>
+                        <td><%= bath.city %>, <%= bath.address %></td>
+                    </tr>
+                    <tr>
+                        <th><b>Longitude</b></th>
+                        <td><%= bath.longitude %></td>
+                    </tr>
+
+                    <tr>
+                        <th><b>Latitude</b></th>
+                        <td><%= bath.latitude %></td>
+                    </tr>
+                    <tr>
+                        <th><b>Bath ID</b></th>
+                        <td><%= bath.id %></td>
+                    </tr>
+                    <tr>
+                        <th><b>Review Count</b></th>
+                        <td><%= bath.reviews.count %></td>
+                    </tr>
+
+
+
+                    <tr style="border-bottom: 1px solid #fff">
+                      <td colspan="2">
+                        <div style="text-alighn:left; width:30%; float: left;"><%= link_to " Directions ", direction_path(bath), :class => 'btn btn-info' %></div>
+                        <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Destroy", bath, method: :delete, data: { confirm: "You sure?" }, :class => 'btn btn-danger' %></div>
+                        <div style="text-align:right; width:30%; float: left;"><%= link_to " View ", view_path(bath), :class => 'btn btn-primary'  %></div>
+                      </td>
+                    </tr>
+
+                </table>
+         <!--<div class="clear"></div>-->
+                
+
             <% end %>
-
+            <% end %>
+        
+        <%= will_paginate @baths %>
         </div>
     </div>
+</div>
+        
+        
+        <% end %>
 
-
-<% elsif isAdmin? %>
-    <% @baths.each do |bath| %>
-    <% if bath.admin_accept == true %>
-    <div class="row" style="width:50%;">
-        <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
-
-
-                    <table class="table">
-                        <tr>
-                            <th><b>Location</b></th>
-                            <td><b><%= bath.city %>, <%= bath.address %></b></td>
-                        </tr>
-                        <tr>
-                            <th><b>Longitude</b></th>
-                            <td><b><%= bath.longitude %></b></td>
-                        </tr>
-
-                        <tr>
-                            <th><b>Latitude</b></th>
-                            <td><b><%= bath.latitude %></b></td>
-                        </tr>
-                        <tr>
-                            <th><b>Bath ID</b></th>
-                            <td><b><%= bath.id %></b></td>
-                        </tr>
-
-
-                        <tr style="border-bottom: 1px solid #fff">
-                          <td colspan="2">
-                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to " Review ", new_bath_review_path(bath) %></div>
-                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Destroy", bath, method: :delete, data: { confirm: "You sure?" } %></div>
-                            <div style="text-align:right; width:30%; float: left;"><%= link_to " View ", view_path(bath) %></div>
-                          </td>
-                        </tr>
-
-                    </table>
- <div class="clear"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-    </div>
-    <% end %>
-
-
-
-    <% end %>
-
-
-
-
-<% end %>
