--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -1,7 +1,7 @@
 <!-- Begin adding bathroom to database -->
 
 <div id="motto">
-    <p>Your contribution will prevent others from boom shakaraka</p>
+    <p>Please fill in all required fields to add your bathroom</p>
 </div>
 
 <%= simple_form_for @bath, html: {multipart: true, class: 'form-horizontal'} do |f| %>
@@ -37,13 +37,13 @@
       <div class="field">
           <%= f.label :image %><br />
           <%= f.file_field :image, autofocus: true %>
-      </div>
+      </div><br>
 
 
   <% if isAdmin? %>
     <%= f.button :submit, "Create my bathroom", class: "btn btn-success" %>
   <% else %>
-    <%=  f.button :submit, "Send bathroom request", class: "btn btn-sucess" %>
+    <%=  f.button :submit, "Send bathroom request", class: "btn btn-success" %>
   <% end %>
 
     </div>
