--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -115,10 +115,10 @@
                       <td><%= image_tag User.find_by_id(review.user_id).image.url(:mini) %></td>
                       <td style="width:750px"><%= review.post %></td>
                       <% if current_user.id == review.user_id %>
-                          <td><%= link_to '<button type="button">Edit your review</button>'.html_safe, edit_bath_review_path(@bath.id, review.id) %>
-                          <%= link_to "Destroy", bath_review_destroy_path(@bath, review), method: :delete, data: { confirm: "You sure?" } %></div></td>
+                          <td><%= link_to "Edit", edit_bath_review_path(@bath.id, review.id), :class => 'btn btn-info' %>
+                          <%= link_to "Destroy", bath_review_destroy_path(@bath, review), method: :delete, data: { confirm: "You sure?" }, :class => 'btn btn-danger' %></div></td>
                       <% elsif review.flags.find_by_user_id(current_user.id) == nil  %>
-                          <td><%= link_to "Report", new_review_flag_path(review) %></td>
+                          <td><%= link_to "Report", new_review_flag_path(review), :class => 'btn btn-warning' %></td>
                       <% elsif current_user.flags.find_by_user_id(current_user.id) != nil %>
                           <td><font color="red">Reported</font></td>
                       <% end %>
@@ -129,7 +129,7 @@
                 </table>
 
             <% end %>
-        <b><%= link_to "Leave A Review", new_bath_review_path(@bath) %> </b>
+        <b><%= link_to "Leave A Review", new_bath_review_path(@bath), :class => 'btn btn-primary' %> </b>
 
 <script type="text/javascript">
 
