--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,9 +1,11 @@
 <!-- Begin user profile page -->
+<h1>Profile</h1>
 
-
+<div class="container-fluid">
+<div class= "row">
 <div style="width:100%;margin:auto;padding:none">
-    <div class="col-md-6 col md-offset-3">
-        <h1>Profile</h1>
+    <div class="col-md-6 col-md-offset-3">
+
         <% if current_user.role == "female" || current_user.role == "male" %>
             <table class="table">
                 <% if current_user.image != nil %>
@@ -37,6 +39,7 @@
                     <td><%= request.location.city %></td>
                 </tr>
             </table>
+        
         <% elsif isAdmin? %>
             <% for user in  @user do%>
                 <% if user == current_user %>
@@ -53,9 +56,7 @@
                             <th><b>Role</b></th>
                             <td><b><%= user.role %></b></td>
                         </tr>
-                        <tr>
-                            <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                        </tr>
+
                     </table>
                 <% else %>
                     <table class="table">
@@ -72,11 +73,16 @@
                             <td><%= user.role %></td>
                         </tr>
                         <tr>
-                            <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                            <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-danger' %></td>
                         </tr>
+                        
                     </table>
                 <% end %>
             <% end %>
         <% end %>
-    </div>
+        <div class="col-md-6 col-md-offset-3">
+            <%= will_paginate @user %>
+        </div>
+</div>
+</div>
 </div>
