--- a/app/views/baths/edit.html.erb
+++ b/app/views/baths/edit.html.erb
@@ -2,10 +2,10 @@
 <h2>This is the place where you choose to accept or deny bathroom requests</h2>
 
 <!--this will be a potential problem when our database gets full so make sure you change it-->
-<% @baths.each do |bath| %>
-        <div class="row" style="width:50%">
-            <div class="col-md-6 col md-offset-3" style="min-width: 450px">
 
+        <div class="row" >
+            <div class="col-md-6 col-md-offset-3" style="min-width: 450px">
+                <% @baths.each do |bath| %>
 
                     <table class="table">
                         <tr>
@@ -46,8 +46,8 @@
                             </div>
                         </td>
                     </table>
-
-
+                <% end %>
             </div>
         </div>
-<% end %>
+        
+
