--- a/app/views/baths/requests.html.erb
+++ b/app/views/baths/requests.html.erb
@@ -1,8 +1,8 @@
 <h1>Bathrooms that you have requested to add</h1>
 
 <% @baths.each do |bath| %>
-        <div class="row" style="width:50%;">
-            <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3" style="min-width: 450px;">
 
             <table class="table">
                         <tr>
