--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -37,9 +37,11 @@
         
         
                             
-                            <% end %>
+                        <% end %>
                     <% end %>
-                    <%= will_paginate @baths %>
+                    <div class="col-md-6 col-md-offset-3">
+                        <%= will_paginate @baths %>
+                    </div>
                 
         <% elsif isAdmin? %>
             <% @baths.each do |bath| %>
@@ -84,7 +86,9 @@
             <% end %>
             <% end %>
         
-        <%= will_paginate @baths %>
+        <div class="col-md-6 col-md-offset-3">
+            <%= will_paginate @baths %>
+        </div>
         </div>
     </div>
 </div>
