--- a/app/views/reviews/reported.html.erb
+++ b/app/views/reviews/reported.html.erb
@@ -1,8 +1,8 @@
 <h1>These are all the reviews that have been multiply reported by users</h1>
 <% @reviews.each do |review| %>
 <div class="container">
-    <div class="row" style="width:50%">
-        <div class="col-md-6 col md-offset-3" style="min-width: 450px">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3" style="min-width: 450px">
             <table class="table">
                 <tr>
                     <th><b>Reported User Name: </b></th>
