--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,22 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+<!--<%- if controller_name != 'sessions' %>-->
+<!--  <%= link_to "Log in", new_session_path(resource_name) %><br />-->
+<!--<% end -%>-->
+
+<!--<%- if devise_mapping.registerable? && controller_name != 'registrations' %>-->
+<!--  <%= link_to "Sign up", new_registration_path(resource_name) %><br />-->
+<!--<% end -%>-->
+
+<%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+    <br><%= link_to user_facebook_omniauth_authorize_path, class: "btn btn-block btn-social btn-facebook" do %>
+   <span class="fa fa-facebook"></span> Sign in with Facebook
+    <% end %>      
+  <% end -%>
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <br><%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-info" %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -18,10 +27,3 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end -%>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to user_facebook_omniauth_authorize_path, class: "btn btn-block btn-social btn-facebook" do %>
-   <span class="fa fa-facebook"></span> Sign in with Facebook
-    <% end %>      
-  <% end -%>
-<% end -%>
