fixed the schema

--- a/app/views/main/nearme.html.erb
+++ b/app/views/main/nearme.html.erb
@@ -2,7 +2,7 @@
 
     <% @baths.each do |bath| %>
     <div class="row">
-        <div class="col-md-6 col md-offset-3">
+        <div class="col-md-6 col-md-offset-3">
 
 
 
@@ -11,18 +11,18 @@
                     <table class="table">
                       <tr>
                           <th><b>Location</b></th>
-                          <td><b><%= bath.city %>, <%= bath.address %></b></td>
+                          <td><%= bath.city %>, <%= bath.address %></td>
                       </tr>
 
                       <tr>
                           <th><b>Distance from me</b></th>
-                          <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
+                          <td><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</td>
                       </tr>
 
                       <tr style="border-bottom: 1px solid #fff">
                         <td colspan="2">
-                          <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Directions", direction_path(bath) %></th></div>
-                          <div style="text-align:right; width:30%; float: left;"><%= link_to "View", view_path(bath) %></div>
+                          <div style="text-alighn:left; width:30%; float: left;"><%= link_to "Directions", direction_path(bath), class: "btn btn-primary"  %></th></div>
+                          <div style="text-align:right; width:30%; float: left;"><%= link_to "View", view_path(bath), class: "btn btn-info" %></div>
                         </td>
                       </tr>
 
