--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,17 +1,17 @@
 <h1>Edit Your Review</h1>
-<%= form_for [@bath, @review] do |f| %>
-    
-    <div class="field">  
-        <%= f.label :rating %><br />
-        <%= f.number_field :rating, value: 1, min: 1, max: 5 %>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3 well">
+        <%= simple_form_for [@bath, @review] do |f| %>
+            <div class="field">  
+                <%= f.input :rating, :collection => 1..5, placeholder: 'Rate this bathroom from 1-5' %>
+            </div>
+            
+            <div class="field">  
+                <%= f.input :post, as: :text %>
+            </div>
+                <%= f.button :submit, "Submit edit", class: "btn btn-success" %> 
+        <% end %>
     </div>
-    
-    <div class="field">  
-        <%= f.label :post %><br />
-        <%= f.text_area :post %>
-        
-    </div>
-        <%= f.submit "Submit edit" %> 
-<% end %>
+</div>
 
 
